@@ -25,7 +25,7 @@
   <parent>
     <groupId>io.wcm</groupId>
     <artifactId>io.wcm.testing.aem-mock.parent</artifactId>
-    <version>3.0.2</version>
+    <version>3.0.3-SNAPSHOT</version>
     <relativePath>../parent/pom.xml</relativePath>
   </parent>
 
@@ -175,6 +175,11 @@
           <groupId>org.apache.sling</groupId>
           <artifactId>org.apache.sling.settings</artifactId>
         </exclusion>
+        <!-- exclude to control dependency ordering ist it includes embedded Batik files -->
+        <exclusion>
+          <groupId>org.apache.sling</groupId>
+          <artifactId>org.apache.sling.xss</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -265,6 +270,13 @@
       <artifactId>org.apache.sling.testing.hamcrest</artifactId>
       <scope>compile</scope>
     </dependency>
+    
+    <!-- Put Sling XSS dependency last as it includes embedded Batik files -->
+    <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.xss</artifactId>
+      <scope>compile</scope>
+    </dependency>
 
     <!-- JUnit 4 -->
     <dependency>
@@ -345,29 +357,6 @@
       </plugin>
 
     </plugins>
-    <pluginManagement>
-      <plugins>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <!-- Travis build workaround, see https://github.com/travis-ci/travis-ci/issues/3396 -->
-            <argLine>-Xmx1024m -XX:MaxPermSize=512M</argLine>
-          </configuration>
-        </plugin>
-
-        <!-- Skip until https://github.com/checkstyle/checkstyle/issues/3238 / https://github.com/checkstyle/checkstyle/issues/3238 is solved -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-checkstyle-plugin</artifactId>
-          <configuration>
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        
-      </plugins>
-    </pluginManagement>
   </build>
 
 </project>
